welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:16: error: ')' expected but '}' found.
}}
^RunHalf:19: error: Unmatched closing brace '}' ignored here
}
^